tweaks to icon to prevent hover overlap

--- a/firefox/chrome/tweaks/navbar-icons.css
+++ b/firefox/chrome/tweaks/navbar-icons.css
@@ -4,9 +4,23 @@
 /*                              Navbar Icons                                 */
 /* ------------------------------------------------------------------------- */
 /* Hides some of the icons in the navbar when it's not hovered               */
-    #nav-bar:not(:hover) {
+    #nav-bar:not(:hover),
+    #nav-bar:has(#nav-bar-customization-target:hover #urlbar-container:hover) {
         #unified-extensions-button,           /* The extensions button       */
-        #fullscreen-button                    /* The fullscreen button       */
+        #fullscreen-button,                    /* The fullscreen button      */
+
+        /* Firefox Profile icon */
+        #fxa-toolbar-menu-button,
+        /* Firefox view button */
+        #firefox-view-button,
+        /* Go to sound tab button */
+        #_0cd726db-f954-44f2-bf4f-7ed0de734de2_-BAP,
+        /* Sidebery Sidebar Button */
+        #_3c078156-979c-498b-8990-85f7987dd929_-BAP,
+        /* Userchrome Style ON/OFF Button */
+        #userchrome-toggle_joolee_nl-BAP, 
+        /* Main setting panel button */
+        #PanelUI-menu-button
         {
             opacity: 0 !important;
         }
@@ -14,12 +28,20 @@
 
 /* Hide some of the icons in the urlbar when it's not hovered                */
     #urlbar-container:not(:hover) {
-        #tracking-protection-icon-container,  /* Tracking protection button  */
-        #reader-mode-button,                  /* Reader mode button          */
-        #star-button-box,                     /* Bookmark star button        */
-        #identity-box,                        /* Identity button             */
-        #picture-in-picture-button,           /* Picture-in-picture button   */
-        #translations-button                  /* The translation button      */
+        /* ***Tracking protection button  */
+        #tracking-protection-icon-container,
+        /* ***Reader mode button          */
+        #reader-mode-button,                  
+        /* ***Bookmark star button        */
+        #star-button-box,                     
+        /* ***Identity button             */
+        #identity-box,                        
+        /* ***Picture-in-picture button   */
+        #picture-in-picture-button,           
+        /* The translation button      */
+        #translations-button,
+        /* Host by Clever Cloud Button */
+        #pageAction-urlbar-_7dfa9578-e530-46fc-bec6-d479ae31b6ba_
         {
             opacity: 0 !important;
         }
@@ -27,9 +49,10 @@
 
 /* "Highlight" the urlbar when hovered                                       */
     #urlbar-container:hover {
-        #urlbar-background                    /* Background of the urlbar    */
+        /* ***Background of the urlbar***    */
+        #urlbar-background                    
         {
-            background-color: rgb(64, 69, 82) !important;
+            background-color: rgb(255, 255, 255) !important;
         }
     }
 
@@ -42,7 +65,14 @@
     #PanelUI-button,
     #translations-button,
     #fullscreen-button,
-    #unified-extensions-button              
+    #unified-extensions-button,
+    #pageAction-urlbar-_7dfa9578-e530-46fc-bec6-d479ae31b6ba_,
+    #firefox-view-button,
+    #fxa-toolbar-menu-button,
+    #_0cd726db-f954-44f2-bf4f-7ed0de734de2_-BAP,
+    #_3c078156-979c-498b-8990-85f7987dd929_-BAP,
+    #userchrome-toggle_joolee_nl-BAP, 
+    #PanelUI-menu-button         
     {
         transition: opacity 0.2s ease-in-out !important;
     }
